<resources>
    <string name="app_name">Agent</string>
    <string name="notification">Notification</string>
    <string name="direction">Direction</string>
    <string name="courier_power_by_kadabra">Powered by kadabra</string>
    <string name="no_results">No Data Available.</string>
    <string name="error_login_server_error">Error Occurred.</string>
    <string name="error_wrong_no">Error Occurred.</string>

    <string name="error_mobile_error">User mobile does not Exist.</string>
    <string name="error_login_server_unknown_error">Unknown Error.</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_internet">No internet connection</string>
    <string name="no_client_phone">Please Enter Client mobile.</string>

    <string name="error_user_name">User name can\'t be empty</string>
    <string name="error_email">Enter a valid email.</string>
    <string name="error_incorrect_user_name">Incorrect User Name.</string>
    <string name="error_incorrect_password">Incorrect Password.</string>
    <string name="error_password">Password can\'t be empty</string>
    <string name="error_email_password_incorrect">Password or Email is incorrect Kindly check them again.</string>
    <string name="skip_now">Skip now</string>
    <string name="email">Email</string>
    <string name="code">Code</string>
    <string name="missing">Missing</string>
    <string name="required">Required</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_invalid_phone">Invalid Phone no.</string>

    <string name="error_email_not_registered">The email is not registered</string>
    <string name="success">Success</string>
    <string name="error_network">Network Error.</string>
    <string name="log_in">Log in</string>
    <string name="crash_error">Sorry!, Something went wrong, we will fixing it soon.</string>
    <string name="restart">Restart</string>
    <string name="loading">Loading...</string>
    <string name="end_task">End Task</string>
    <string name="exit">Are you sure you want to exit?</string>
    <string name="message_delete">Are you sure you want to delete </string>

    <string name="tickets">Tickets</string>
    <string name="call_courier">Call Courier</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="wallet">Wallet</string>
    <string name="schedule_tasks">Schedule Tasks</string>
    <string name="log_out">Log out</string>
    <string name="filter">Filter</string>
    <string name="user_name_email">User Name</string>
    <string name="password">Password</string>
    <string name="remember_me">REMEMBER ME</string>
    <string name="don_t_have_an_account">Don\'t have an Account</string>
    <string name="sign_up">SIGN UP</string>
    <string name="kadabra">Kadabra</string>
    <string name="priority">Priority</string>
    <string name="price">Price</string>
    <string name="le">LE</string>
    <string name="details">Details</string>
    <string name="status">Status</string>
    <string name="no_details_available">No details available.</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="pickup">PickUp:</string>
    <string name="drop_off">Drop Off:</string>


    <string name="no_stop">No location determined.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">Update</string>

    <string name="no_tasks_available">No Tasks Available</string>
    <string name="tasks">Tasks</string>
    <string name="service_cost">Service Cost</string>

    <string name="no_ticket_available">No Ticket Available</string>
    <string name="add_new">Add+</string>
    <string name="new_status">New</string>

    <string name="select_status">Select Status ...</string>
    <string name="select_ticket">Select Ticket ...</string>
    <string name="select_task">Select Task ...</string>
    <string name="select_courier">Select Courier ...</string>
    <string name="select_payment_method">Select Payment ...</string>
    <string name="select_priority">Select Priority ...</string>
    <string name="select_category">Select Category ...</string>
    <string name="category">Category</string>

    <string name="stops">Stops</string>
    <string name="edit_task">Edit Task</string>
    <string name="delete">Delete</string>
    <string name="stop_name">Stop Name</string>
    <string name="task_details">Task Details</string>
    <string name="new_task">New Task</string>


    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="save">Save</string>
    <string name="ticket_name">Ticket Name</string>
    <string name="ticket_description">Ticket Description</string>
    <string name="user_mobile">User Mobile</string>
    <string name="ticket_status">Ticket Status</string>
    <string name="ticket_category">Ticket Category</string>
    <string name="need_courier">Need Courier</string>
    <string name="payment_method">Payment Method</string>


    <string name="task_name">Task Name</string>
    <string name="task_description">Task Description</string>

    <string name="amount">Amount</string>
    <string name="pickup_time">Pickup Time</string>

    <string name="add_stop">Add Stop</string>
    <string name="show">Show</string>
    <string name="clear">Clear</string>

    <string name="error_location_permission_required">Location Permission is required to obtain location.</string>
    <string name="error_no_location_permission_gived">You did not give permissions to get location</string>
    <string name="Permission">Permission</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="ok">ok</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="ticket_details">Ticket Details</string>
    <string name="new_ticket">New Ticket</string>
    <string name="new_service_cost">Add Service Cost</string>
    <string name="service_cost_name">Service Cost Name</string>
    <string name="service_cost_cost">Cost</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="settings">Settings</string>
    <string name="permission_denied">Denied</string>
    <string name="error_permission">Permission to access device location is permanently denied. you need to go to setting to allow the permission.</string>
    <string name="please_update">Please Update Your App</string>
    <string name="update_now">Update Now</string>
    <string name="beta_version">Beta Version</string>
    <string name="google_map_key">AIzaSyAjSI0GYuAh0RwtltIluYsds4pU7O_dvtc</string>
    <string name="duration">Duration: </string>
    <string name="distance">Distance: </string>
    <string name="trip">"Trip # </string>
    <string name="day">Day </string>
    <string name="hour">hr </string>
    <string name="minutes">min</string>
    <string name="error_calculate_distance">Can\'t find a way there.</string>
    <string name="km">km</string>
    <string name="fastest_route">Fastest route now due to traffic conditions</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="cancel_task">Cancel Task</string>
    <string name="confirm">Confirm</string>

</resources>

