<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:scrollbars="none">

        <requestFocus />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rlParentConfirm"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/colorSecondary"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/ivBackConfirmCancel"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    app:srcCompat="@drawable/ic_back" />/>

                <TextView
                    android:id="@+id/tvCancelTask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:text="@string/cancel_task"
                    android:textAllCaps="false"
                    android:textColor="@color/colorLabel"
                    android:textSize="18sp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/rlParentConfirm">

                <EditText
                    android:id="@+id/etTotalCost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/service_cost_cost"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:selectAllOnFocus="true"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btnCancelConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etTotalCost"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/confirm"
                    android:textAllCaps="false"
                    android:textColor="@color/colorSecondary"
                    android:textSize="20sp" />
            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>